Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23519

Protocol packet - "Original Name" info is showing alias name, instead of original name of the column

    XMLWordPrintable

Details

    Description

      One of the customers, noted that the MySQL protocol packet captured at client 10.4 is having "Original name" parameter using the alias name instead of the original column name which you can see 10.2 is showing up properly.

      Attachments

        Issue Links

          Activity

            People

              monty Michael Widenius
              suresh.ramagiri@mariadb.com suresh ramagiri
              Votes:
              3 Vote for this issue
              Watchers:
              12 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.