MDEV-23519 -- Addressing review comments. Simplifying code by assigning orig_field_name to field name if orig_field_name exists.